--- a/classes/immolator/index.html
+++ b/classes/immolator/index.html
@@ -160,7 +160,7 @@
 <div class="Move"><div id="SpiritTongue"><h3 class="BasicMoveName">振火神通 (Zuko Style)</h3>
 <p class="NoIndent">
 	當你<strong>讓烈焰屈服於你的意志</strong>時，擲+睿知：<br/>
-	✴擲出10+時，只要仍有足夠的燃料讓火焰燃燒，它就會依照你的命令行事，按你所想的的變化外型和移動。<br/>
+	✴擲出10+時，只要仍有足夠的燃料讓火焰燃燒，它就會照你的命令行事，按你所想的變化外型和移動。<br/>
 	✴擲出7-9時，這個效果相當短暫，只會持續片刻。</p></div></div>
 
 <div class="Move"><div id="Shapeshifter"><h3 class="BasicMoveName">予我燃油，予我烈火 (Give Me Fuel, Give me Fire)</h3>
